--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Charlottenburg.GitHub.io by Charlottenburg</title>
+    <title>Welcome to Charlotte's Site</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -28,8 +28,8 @@
 
       <section>
         <div id="title">
-          <h1>Charlottenburg.GitHub.io</h1>
-          <p></p>
+          <h1>Welcome to charlotte's site</h1>
+          <p>Feel free to bookmark this to keep an eye on my future projects</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/Charlottenburg">Charlottenburg</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
